Created and deployed the Float Containment Unit

--- a/html/bunoden.html
+++ b/html/bunoden.html
@@ -48,191 +48,199 @@
         <button type="button" onclick="revealAll()">全てを現す</button>
         <!-- アルクスニス・アリギルトス（Aļģirts Alksnis） -->
         <section>
-          <h4 id="Aļģirts_Alksnis">アルクスニス・アリギルトス</h4>
-          <button type="button" onclick="">アリギルトスを隠す</button>
-          <button type="button" onclick="">アリギルトスを現す</button>
-          <div class="pride">
-            <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
-            <p class="pronouns">代名詞：</p>
-            <!-- Pride template / Pride flag placeholder :3 -->
-            <div class="container">
-              <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-                <img class="pride-flag image" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
-              </a>
-              <div class="middle">
-                <div class="text">
-                  プライド
+          <div class="containment-unit">
+            <h4 id="Aļģirts_Alksnis">アルクスニス・アリギルトス</h4>
+            <button type="button" onclick="">アリギルトスを隠す</button>
+            <button type="button" onclick="">アリギルトスを現す</button>
+            <div class="pride">
+              <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+              <p class="pronouns">代名詞：</p>
+              <!-- Pride template / Pride flag placeholder :3 -->
+              <div class="container">
+                <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+                  <img class="pride-flag image" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
+                </a>
+                <div class="middle">
+                  <div class="text">
+                    プライド
+                  </div>
                 </div>
               </div>
+              <br>
             </div>
-            <br>
+            <div class="art-chara">
+              <img class="art" src="../img/fill.png" alt="アルクスニス・アリギルトス">
+              <p class="caption">アリギルトス</p>
+            </div>
+            <p>智識の瞳</p>
+            <p>
+              アルクスニス・アリギルトス<br>
+              <span lang="lv" class="font-latin">Alksnis Aļģirts</span>
+            </p>
+            <p>
+              種族：さとり<br>
+              能力：他人の智識を見る程度の能力
+            </p>
+            <p>
+              性別：<br>
+              性自認：<br>
+              代名詞：<br>
+              雌雄性：
+            </p>
+            <p>
+              誕生日：<br>
+              年齢：
+            </p>
+            <p>家族：</p>
+            <p>クリメンティーナの夫であり、リーリヤとキェルスタの父親である。</p>
           </div>
-          <div class="art-chara">
-            <img class="art" src="../img/fill.png" alt="アルクスニス・アリギルトス">
-            <p class="caption">アリギルトス</p>
-          </div>
-          <p>智識の瞳</p>
-          <p>
-            アルクスニス・アリギルトス<br>
-            <span lang="lv" class="font-latin">Alksnis Aļģirts</span>
-          </p>
-          <p>
-            種族：さとり<br>
-            能力：他人の智識を見る程度の能力
-          </p>
-          <p>
-            性別：<br>
-            性自認：<br>
-            代名詞：<br>
-            雌雄性：
-          </p>
-          <p>
-            誕生日：<br>
-            年齢：
-          </p>
-          <p>家族：</p>
-          <p>クリメンティーナの夫であり、リーリヤとキェルスタの父親である。</p>
         </section>
         <!-- アルクスネ・キェルスタ（Ķersta Alksne） -->
         <section>
-          <h4 id="Ķersta_Alksne">アルクスネ・キェルスタ</h4>
-          <button type="button" onclick="">キェルスタを隠す</button>
-          <button type="button" onclick="">キェルスタを現す</button>
-          <div class="pride">
-            <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
-            <p class="pronouns">代名詞：</p>
-            <!-- Pride template / Pride flag placeholder :3 -->
-            <div class="container">
-              <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-                <img class="pride-flag image" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
-              </a>
-              <div class="middle">
-                <div class="text">
-                  プライド
+          <div class="containment-unit">
+            <h4 id="Ķersta_Alksne">アルクスネ・キェルスタ</h4>
+            <button type="button" onclick="">キェルスタを隠す</button>
+            <button type="button" onclick="">キェルスタを現す</button>
+            <div class="pride">
+              <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+              <p class="pronouns">代名詞：</p>
+              <!-- Pride template / Pride flag placeholder :3 -->
+              <div class="container">
+                <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+                  <img class="pride-flag image" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
+                </a>
+                <div class="middle">
+                  <div class="text">
+                    プライド
+                  </div>
                 </div>
               </div>
+              <br>
             </div>
-            <br>
+            <div class="art-chara">
+              <img class="art" src="../img/fill.png" alt="アルクスネ・キェルスタ">
+              <p class="caption">キェルスタ</p>
+            </div>
+            <p>後悔の瞳</p>
+            <p>
+              アルクスネ・キェルスタ<br>
+              <span lang="lv" class="font-latin">Alksne Ķersta</span>
+            </p>
+            <p>
+              種族：さとり<br>
+              能力：他人の後悔を見る程度の能力
+            </p>
+            <p>
+              性別：<br>
+              性自認：<br>
+              代名詞：<br>
+              雌雄性：
+            </p>
+            <p>
+              誕生日：<br>
+              年齢：
+            </p>
+            <p>家族：</p>
+            <p>クリメンティーナとアリギルトスの娘であり、リーリヤの妹である。</p>
           </div>
-          <div class="art-chara">
-            <img class="art" src="../img/fill.png" alt="アルクスネ・キェルスタ">
-            <p class="caption">キェルスタ</p>
-          </div>
-          <p>後悔の瞳</p>
-          <p>
-            アルクスネ・キェルスタ<br>
-            <span lang="lv" class="font-latin">Alksne Ķersta</span>
-          </p>
-          <p>
-            種族：さとり<br>
-            能力：他人の後悔を見る程度の能力
-          </p>
-          <p>
-            性別：<br>
-            性自認：<br>
-            代名詞：<br>
-            雌雄性：
-          </p>
-          <p>
-            誕生日：<br>
-            年齢：
-          </p>
-          <p>家族：</p>
-          <p>クリメンティーナとアリギルトスの娘であり、リーリヤの妹である。</p>
         </section>
         <!-- アルクスネ・クリメンティーナ（Klimentīna Alksne） -->
         <section>
-          <h4 id="Klimentīna_Alksne">アルクスネ・クリメンティーナ</h4>
-          <button type="button" onclick="">クリメンティーナを隠す</button>
-          <button type="button" onclick="">クリメンティーナを現す</button>
-          <div class="pride">
-            <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
-            <p class="pronouns">代名詞：</p>
-            <!-- Pride template / Pride flag placeholder :3 -->
-            <div class="container">
-              <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-                <img class="pride-flag image" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
-              </a>
-              <div class="middle">
-                <div class="text">
-                  プライド
+          <div class="containment-unit">
+            <h4 id="Klimentīna_Alksne">アルクスネ・クリメンティーナ</h4>
+            <button type="button" onclick="">クリメンティーナを隠す</button>
+            <button type="button" onclick="">クリメンティーナを現す</button>
+            <div class="pride">
+              <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+              <p class="pronouns">代名詞：</p>
+              <!-- Pride template / Pride flag placeholder :3 -->
+              <div class="container">
+                <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+                  <img class="pride-flag image" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
+                </a>
+                <div class="middle">
+                  <div class="text">
+                    プライド
+                  </div>
                 </div>
               </div>
+              <br>
             </div>
-            <br>
+            <div class="art-chara">
+              <img class="art" src="../img/fill.png" alt="アルクスネ・クリメンティーナ">
+              <p class="caption">クリメンティーナ</p>
+            </div>
+            <p>性欲の瞳</p>
+            <p>
+              アルクスネ・クリメンティーナ<br>
+              <span lang="lv" class="font-latin">Alksne Klimentīna</span>
+            </p>
+            <p>
+              種族：さとり<br>
+              能力：他人の性欲を見る程度の能力
+            </p>
+            <p>
+              性別：<br>
+              性自認：<br>
+              代名詞：<br>
+              雌雄性：
+            </p>
+            <p>
+              誕生日：<br>
+              年齢：
+            </p>
+            <p>家族：</p>
+            <p>アリギルトスの妻であり、リーリヤとキェルスタの母親である。</p>
           </div>
-          <div class="art-chara">
-            <img class="art" src="../img/fill.png" alt="アルクスネ・クリメンティーナ">
-            <p class="caption">クリメンティーナ</p>
-          </div>
-          <p>性欲の瞳</p>
-          <p>
-            アルクスネ・クリメンティーナ<br>
-            <span lang="lv" class="font-latin">Alksne Klimentīna</span>
-          </p>
-          <p>
-            種族：さとり<br>
-            能力：他人の性欲を見る程度の能力
-          </p>
-          <p>
-            性別：<br>
-            性自認：<br>
-            代名詞：<br>
-            雌雄性：
-          </p>
-          <p>
-            誕生日：<br>
-            年齢：
-          </p>
-          <p>家族：</p>
-          <p>アリギルトスの妻であり、リーリヤとキェルスタの母親である。</p>
         </section>
         <!-- アルクスネ・リーリヤ（Līrija Alksne） -->
         <section>
-          <h4 id="Līrija_Alksne">アルクスネ・リーリヤ</h4>
-          <button type="button" onclick="">リーリヤを隠す</button>
-          <button type="button" onclick="">リーリヤを現す</button>
-          <div class="pride">
-            <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
-            <p class="pronouns">代名詞：</p>
-            <!-- Pride template / Pride flag placeholder :3 -->
-            <div class="container">
-              <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
-                <img class="pride-flag image" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
-              </a>
-              <div class="middle">
-                <div class="text">
-                  プライド
+          <div class="containment-unit">
+            <h4 id="Līrija_Alksne">アルクスネ・リーリヤ</h4>
+            <button type="button" onclick="">リーリヤを隠す</button>
+            <button type="button" onclick="">リーリヤを現す</button>
+            <div class="pride">
+              <p class="pride-head"><strong>🏳️‍🌈 プライド 🏳️‍🌈</strong></p>
+              <p class="pronouns">代名詞：</p>
+              <!-- Pride template / Pride flag placeholder :3 -->
+              <div class="container">
+                <a href="https://lgbtqia.fandom.com/wiki/" title="プライド" target="_blank">
+                  <img class="pride-flag image" src="../img/pride/Pride.png" alt="プライド" title="プライド（Pride）">
+                </a>
+                <div class="middle">
+                  <div class="text">
+                    プライド
+                  </div>
                 </div>
               </div>
+              <br>
             </div>
-            <br>
+            <div class="art-chara">
+              <img class="art" src="../img/fill.png" alt="アルクスネ・リーリヤ">
+              <p class="caption">リーリヤ</p>
+            </div>
+            <p>感情の瞳</p>
+            <p>
+              アルクスネ・リーリヤ<br>
+              <span lang="lv" class="font-latin">Alksne Līrija</span>
+            </p>
+            <p>
+              種族：さとり<br>
+              能力：他人の感情を見る程度の能力
+            </p>
+            <p>
+              性別：<br>
+              性自認：<br>
+              代名詞：<br>
+              雌雄性：
+            </p>
+            <p>
+              誕生日：<br>
+              年齢：
+            </p>
+            <p>家族：</p>
+            <p>クリメンティーナとアリギルトスの娘であり、キェルスタの姉である。</p>
           </div>
-          <div class="art-chara">
-            <img class="art" src="../img/fill.png" alt="アルクスネ・リーリヤ">
-            <p class="caption">リーリヤ</p>
-          </div>
-          <p>感情の瞳</p>
-          <p>
-            アルクスネ・リーリヤ<br>
-            <span lang="lv" class="font-latin">Alksne Līrija</span>
-          </p>
-          <p>
-            種族：さとり<br>
-            能力：他人の感情を見る程度の能力
-          </p>
-          <p>
-            性別：<br>
-            性自認：<br>
-            代名詞：<br>
-            雌雄性：
-          </p>
-          <p>
-            誕生日：<br>
-            年齢：
-          </p>
-          <p>家族：</p>
-          <p>クリメンティーナとアリギルトスの娘であり、キェルスタの姉である。</p>
         </section>
       </article>
       <!-- 始まりに戻る（Return to Top） -->
